--- a/BuddhaBowls/UserControls/InventoryTabControl.xaml
+++ b/BuddhaBowls/UserControls/InventoryTabControl.xaml
@@ -16,8 +16,14 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="30" />
         </Grid.RowDefinitions>
-        <TextBlock x:Name="textBlock" Grid.Row="0" Margin="0" Text="Inventory" VerticalAlignment="Center" HorizontalAlignment="Center"
+        <TextBlock x:Name="textBlock" Grid.Row="0" Margin="0" Text="{Binding Header}" VerticalAlignment="Center" HorizontalAlignment="Center"
                    FontSize="30"/>
+        <Button Content="Inventory" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="-300,0, 0, 0" Grid.Row="1" Width="150"
+                Command="{Binding InventorySectionCommand}"/>
+        <Button Content="Batch Items" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Row="1" Width="150"
+                Command="{Binding BatchSectionCommand}"/>
+        <Button Content="Menu Items" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="300,0, 0, 0" Grid.Row="1" Width="150"
+                Command="{Binding MenuSectionCommand}"/>
         <DatePicker Grid.Row="1" SelectedDate="{Binding InventoryDate}" Height="25" Width="130" HorizontalAlignment="Left" VerticalAlignment="Bottom"
                     Margin="10, 0, 0, 0"/>
         <Button x:Name="ChangeOrderButton" Content="Change Display Order" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="65,0"
