--- a/BuddhaBowls/UserControls/InventoryTabControl.xaml
+++ b/BuddhaBowls/UserControls/InventoryTabControl.xaml
@@ -4,57 +4,37 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BuddhaBowls.UserControls"
-             xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="60" />
-            <RowDefinition Height="60" />
-            <RowDefinition Height="30" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="30" />
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBlock x:Name="textBlock" Grid.Row="0" Margin="0" Text="{Binding Header}" VerticalAlignment="Center" HorizontalAlignment="Center"
-                   FontSize="30"/>
-        <Button Content="Inventory" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="-300,0, 0, 0" Grid.Row="1" Width="150"
-                Command="{Binding InventorySectionCommand}"/>
-        <Button Content="Batch Items" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Row="1" Width="150"
-                Command="{Binding BatchSectionCommand}"/>
-        <Button Content="Menu Items" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="300,0, 0, 0" Grid.Row="1" Width="150"
-                Command="{Binding MenuSectionCommand}"/>
-        <DatePicker Grid.Row="1" SelectedDate="{Binding InventoryDate}" Height="25" Width="130" HorizontalAlignment="Left" VerticalAlignment="Bottom"
-                    Margin="10, 0, 0, 0"/>
-        <Button x:Name="ChangeOrderButton" Content="Change Display Order" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="65,0"
-                Grid.Row="1" Width="137" Command="{Binding ChangeOrderCommand}"/>
-        <TextBox x:Name="FilterItemBox" Grid.Row="1" Text="{Binding FilterText}" HorizontalAlignment="Center" VerticalAlignment="Bottom"
-                 Height="25"  Width="200" Controls:TextBoxHelper.Watermark="Filter by item name..." TextChanged="FilterItems_TextChanged" />
-        <Label x:Name="label1" Grid.Row="1" Content="Inventory Item Name:" Margin="-330, 0, 0, 0" HorizontalAlignment="Center"
-               VerticalAlignment="Bottom"/>
-        <Button Grid.Row="2" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right" Margin="0, 0, 35, 0"
-                Command="{Binding AddInventoryItemCommand}">
+        <TextBlock Grid.Row="0" Text="Inventory" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0, 20, 0, 0" FontSize="24"/>
+        <Button Grid.Row="0" Height="30"  Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right"
+                VerticalAlignment="Bottom" Margin="35, 0" Command="{Binding AddInventoryCommand}">
             <iconPacks:PackIconFontAwesome Kind="Plus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         </Button>
-        <Button Grid.Row="2" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right" Margin="0, 0, 5, 0"
-                Command="{Binding DeleteInventoryItemCommand}">
+        <Button Grid.Row="0" Height="30" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right"
+                VerticalAlignment="Bottom" Margin="5, 0" Command="{Binding DeleteInventoryCommand}">
             <iconPacks:PackIconFontAwesome Grid.Row="2" Kind="Minus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         </Button>
-        <Button x:Name="button2" Content="Edit" HorizontalAlignment="Right" Margin="0,0,65,0" Grid.Row="2" VerticalAlignment="Center" Width="75"
-                Command="{Binding EditInventoryItemCommand}"/>
-        <DataGrid Grid.Row="3" ItemsSource="{Binding FilteredInventoryItems}" HorizontalAlignment="Stretch"
-                              VerticalAlignment="Stretch" ScrollViewer.VerticalScrollBarVisibility="Auto"
-                              SelectedItem="{Binding SelectedInventoryItem}" AutoGenerateColumns="False"
-                              CellEditEnding="MasterList_CellEditEnding" CanUserAddRows="False">
+        <Button Grid.Row="0" Height="30" Width="70" Content="View" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="70, 0"
+                Command="{Binding ViewInventoryCommand}" />
+        <Button Grid.Row="0" Height="30" Width="70" Content="Add Item" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="140, 0"
+                Command="{Binding AddItemCommand}" />
+        <Button Grid.Row="0" Height="30" Width="70" Content="Compare" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="210, 0"
+                Command="{Binding CompareCommand}" />
+        <DataGrid x:Name="dataGrid2" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                                ScrollViewer.VerticalScrollBarVisibility="Auto" ItemsSource="{Binding InventoryList}"
+                                SelectedItem="{Binding SelectedInventory}" AutoGenerateColumns="False" CanUserAddRows="False">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Name" Binding="{Binding Path=Name, Mode=OneWay}" Width="2*"/>
-                <DataGridTextColumn Header="Category" Binding="{Binding Path=Category, Mode=OneWay}" Width="1*"/>
-                <DataGridTextColumn Header="Count" Binding="{Binding Path=Count, StringFormat=0.##}" Width="1*" />
+                <DataGridTextColumn Header="Inv #" Binding="{Binding Id}" Width="60" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Date" Binding="{Binding Path=Date, StringFormat={}{0:MM/dd/yy}}"
+                                                Width="2*" IsReadOnly="True" />
             </DataGrid.Columns>
         </DataGrid>
-        <Button Grid.Row="4" Height ="25" Width="80" Content="Save" HorizontalAlignment="Right" Margin="5, 0" Command="{Binding SaveCountCommand}" />
-        <Button Grid.Row="4" Height ="25" Width="80" Content="Reset" HorizontalAlignment="Right" Margin="85, 0" Command="{Binding ResetCountCommand}" />
-        <TextBlock Grid.Row="4" Text="Saved" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center" Width="50" Height="20"
-                   Background="LightGreen" Visibility="{Binding SavedVisibility}" />
     </Grid>
 </UserControl>
