--- a/BuddhaBowls/UserControls/NewRecipe.xaml
+++ b/BuddhaBowls/UserControls/NewRecipe.xaml
@@ -7,6 +7,35 @@
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="800">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="60" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="5*" />
+        </Grid.ColumnDefinitions>
+        <TextBlock Text="New Recipe" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24"/>
+        <Label x:Name="label" Content="Name" HorizontalAlignment="Right" Margin="25,30,0,0" Grid.Row="1" Grid.Column="0" VerticalAlignment="Top"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="10,30,0,0" Grid.Row="1" Grid.Column="1" TextWrapping="Wrap" Text="{Binding Name}"
+                 VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="label1" Content="Category" HorizontalAlignment="Right" Margin="25,60,0,0" Grid.Row="1" Grid.Column="0" VerticalAlignment="Top"/>
+        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="23" Margin="10,60,0,0" Grid.Row="1" Grid.Column="1" TextWrapping="Wrap"
+                 Text="{Binding Category}" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="label2" Content="Recipe Unit" HorizontalAlignment="Right" Margin="25,90,0,0" Grid.Row="1" Grid.Column="0" VerticalAlignment="Top"/>
+        <TextBox x:Name="textBox2" HorizontalAlignment="Left" Height="23" Margin="10,90,0,0" Grid.Row="1" TextWrapping="Wrap" Grid.Column="1"
+                 Text="{Binding RecipeUnit}" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="label3" Content="Recipe Unit Conversion" HorizontalAlignment="Right" Margin="25,120,0,0" Grid.Row="1" Grid.Column="0" VerticalAlignment="Top"/>
+        <TextBox x:Name="textBox3" HorizontalAlignment="Left" Height="23" Margin="10,120,0,0" Grid.Row="1" Grid.Column="1" TextWrapping="Wrap"
+                 Text="{Binding Conversion}" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="label4" Content="Measure" HorizontalAlignment="Right" Margin="25,150,0,0" Grid.Row="1" Grid.Column="0" VerticalAlignment="Top"/>
+        <TextBox x:Name="textBox4" HorizontalAlignment="Left" Height="23" Margin="10,150,0,0" Grid.Row="1" Grid.Column="1" TextWrapping="Wrap" 
+                 Text="{Binding Measure}" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="label5" Content="Count" HorizontalAlignment="Right" Margin="25,180,0,0" Grid.Row="1" Grid.Column="0" VerticalAlignment="Top"/>
+        <TextBox x:Name="textBox5" HorizontalAlignment="Left" Height="23" Margin="10,180,0,0" Grid.Row="1" Grid.Column="1" TextWrapping="Wrap" Text="{Binding Count}"
+                 VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="label6" Content="Ingredient 1:" HorizontalAlignment="Right" Margin="25,210,0,0" Grid.Row="1" Grid.Column="0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="textBox6" HorizontalAlignment="Left" Height="23" Margin="10,210,0,0" Grid.Row="1" Grid.Column="1" IsEditable="True"
+                  SelectedItem="{Binding RecipeItems[0]}" VerticalAlignment="Top" Width="120"/>
     </Grid>
 </UserControl>
