--- a/BuddhaBowls/UserControls/RecipeTabControl.xaml
+++ b/BuddhaBowls/UserControls/RecipeTabControl.xaml
@@ -4,62 +4,48 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BuddhaBowls.UserControls"
+             xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="40" />
+            <RowDefinition Height="80" />
             <RowDefinition Height="30" />
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="30" />
-            <RowDefinition Height="1*" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Label Content="Menu Items" Grid.Row="0" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" Margin="0, 0, 0, 0" />
-        <DataGrid x:Name="dataGrid1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                                ScrollViewer.VerticalScrollBarVisibility="Auto" ItemsSource="{Binding MenuItems}"
-                                SelectedItem="{Binding SelectedMenuItem}" AutoGenerateColumns="False" CanUserAddRows="False">
+        <Label Content="Recipes" Grid.Row="0" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <Label x:Name="label1" Grid.Row="1" Content="Recipe Name:" Margin="-330, 0, 0, 0" HorizontalAlignment="Center"
+               VerticalAlignment="Bottom"/>
+        <TextBox x:Name="FilterItemBox" Grid.Row="1" Text="{Binding FilterText}" HorizontalAlignment="Center" VerticalAlignment="Bottom"
+                 Height="25"  Width="200" Controls:TextBoxHelper.Watermark="Filter by item name..." TextChanged="FilterItems_TextChanged" />
+        <DataGrid x:Name="dataGrid1" Grid.Row="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                                ScrollViewer.VerticalScrollBarVisibility="Auto" ItemsSource="{Binding FilteredItems}"
+                                SelectedItem="{Binding SelectedItem}" AutoGenerateColumns="False" CanUserAddRows="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="2*" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Count" Binding="{Binding Count}" Width="1*" />
                 <DataGridTextColumn Header="Cost" Binding="{Binding Path=RecipeCost, StringFormat=c}" Width="1*" IsReadOnly="True"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="button" Grid.Row="0" Content="Edit" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="70,0" Width="50" Height="25"
-                Command="{Binding MenuEditCommand}"/>
-        <Button Grid.Row="0" Height="30"  Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right"
+        <Button x:Name="button" Grid.Row="2" Content="Edit" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="70,0" Width="50" Height="25"
+                Command="{Binding EditCommand}"/>
+        <Button Grid.Row="2" Height="30"  Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right"
                 VerticalAlignment="Center" Margin="35, 0" Command="{Binding AddNewMenuItemCommand}">
             <iconPacks:PackIconFontAwesome Kind="Plus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         </Button>
-        <Button Grid.Row="0" Height="30" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right"
+        <Button Grid.Row="2" Height="30" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right"
                 VerticalAlignment="Center" Margin="5, 0" Command="{Binding DeleteMenuItemCommand}">
             <iconPacks:PackIconFontAwesome Grid.Row="2" Kind="Minus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         </Button>
-
-        <Label Content="Batch Recipes" Grid.Row="2" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" Margin="0, 0, 0, 0" />
-        <DataGrid x:Name="dataGrid2" Grid.Row="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                                ScrollViewer.VerticalScrollBarVisibility="Auto" ItemsSource="{Binding BatchItems}"
-                                SelectedItem="{Binding SelectedBatchItem}" AutoGenerateColumns="False" CanUserAddRows="False">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="2*" IsReadOnly="True"/>
-                <DataGridTextColumn Header="Recipe Conversion" Width="2*" IsReadOnly="True">
-                    <DataGridTextColumn.Binding>
-                        <MultiBinding StringFormat="{}{0}  {1}">
-                            <Binding Path="RecipeUnitConversion" />
-                            <Binding Path="RecipeUnit" />
-                        </MultiBinding>
-                    </DataGridTextColumn.Binding>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="Cost" Binding="{Binding Path=RecipeCost, StringFormat=c}" Width="1*" IsReadOnly="True"/>
-            </DataGrid.Columns>
-        </DataGrid>
-        <Button x:Name="editButton2" Grid.Row="2" Content="Edit" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="70,0" Width="50"
-                Height="25" Command="{Binding BatchEditCommand}"/>
         <Button Grid.Row="2" Height="30"  Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right"
-                VerticalAlignment="Center" Margin="35, 0" Command="{Binding AddNewBatchItemCommand}">
-            <iconPacks:PackIconFontAwesome Kind="Plus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-        </Button>
+                VerticalAlignment="Center" Margin="35, 0" Command="{Binding AddNewItemCommand}"/>
         <Button Grid.Row="2" Width="25" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right" VerticalAlignment="Center"
-                            Margin="5, 0" Command="{Binding DeleteBatchItemCommand}">
-            <iconPacks:PackIconFontAwesome Kind="Minus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-        </Button>
+                            Margin="5, 0" Command="{Binding DeleteItemCommand}"/>
+        <Button x:Name="button1" Content="Batch Items" HorizontalAlignment="Center" Margin="-100,10,0,0" Grid.Row="1" VerticalAlignment="Top"
+                Width="100" Command="{Binding BatchItemSelectCommand}"/>
+        <Button x:Name="button2" Content="Menu Items" HorizontalAlignment="Center" Margin="100,10,0,0" Grid.Row="1" VerticalAlignment="Top"
+                Width="100" Command="{Binding MenuItemSelectCommand}"/>
     </Grid>
 </UserControl>
