--- a/BuddhaBowls/MainWindow.xaml
+++ b/BuddhaBowls/MainWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:local="clr-namespace:BuddhaBowls"
         xmlns:uc="clr-namespace:BuddhaBowls.UserControls"
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+        xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
         mc:Ignorable="d"
         BorderBrush="{DynamicResource AccentColorBrush}"
         BorderThickness="1"
@@ -50,5 +51,23 @@
                 </Grid>
             </TabItem>
         </TabControl>
+
+        <Dialog:CustomDialog Title="{Binding ModalTitle}" HorizontalAlignment="Stretch" Grid.RowSpan="4" Visibility="{Binding ModalVisibility}"
+                             Background="LightCyan" DataContext="{Binding ModalContext}">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="30"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="1*" />
+                </Grid.ColumnDefinitions>
+                <ComboBox Height="30" Width="200" Grid.Row="0" Grid.ColumnSpan="2" SelectedItem="{Binding ItemToAdd}" IsEditable="True"
+                          ItemsSource="{Binding RemainingItems}" DisplayMemberPath="Name" Background="LightCyan"/>
+                <Button Content="OK" Width="50" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Right" Command="{Binding ModalOkCommand}" />
+                <Button Content="Cancel" Width="60" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Command="{Binding ModalCancelCommand}" />
+            </Grid>
+        </Dialog:CustomDialog>
     </Grid>
 </Controls:MetroWindow>
