--- a/BuddhaBowls/UserControls/SetVendorItems.xaml
+++ b/BuddhaBowls/UserControls/SetVendorItems.xaml
@@ -5,7 +5,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BuddhaBowls.UserControls"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-             xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="800">
@@ -45,28 +44,11 @@
                 <DataGridTextColumn Header="Category" Binding="{Binding Path=Category, Mode=OneWay}" Width="1*"/>
                 <DataGridTextColumn Header="Purchase Unit" Binding="{Binding Path=PurchasedUnit}" Width="1*"/>
                 <DataGridTextColumn Header="Conversion" Binding="{Binding Path=Conversion}" Width="1*"/>
-                <DataGridTextColumn Header="Purchase Price" Binding="{Binding Path=Count, StringFormat=c}" Width="1*" />
+                <DataGridTextColumn Header="Purchase Price" Binding="{Binding Path=LastPurchasedPrice, StringFormat=c}" Width="1*" />
             </DataGrid.Columns>
         </DataGrid>
         <Button Grid.Row="4" Height ="25" Width="80" Content="Cancel" HorizontalAlignment="Right" Margin="5, 0" Command="{Binding CancelCommand}" />
         <Button Grid.Row="4" Height ="25" Width="80" Content="Save" HorizontalAlignment="Right" Margin="85, 0" Command="{Binding SaveCommand}" />
         <Button Grid.Row="4" Height ="25" Width="80" Content="Reset" HorizontalAlignment="Left" Margin="5, 0" Command="{Binding ResetCommand}" />
-        
-        <Dialog:CustomDialog Title="Choose Vendor Item" HorizontalAlignment="Stretch" Grid.RowSpan="4" Visibility="{Binding ModalVisibility}" Background="LightCyan">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="30"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*" />
-                    <ColumnDefinition Width="1*" />
-                </Grid.ColumnDefinitions>
-                <ComboBox Height="30" Width="200" Grid.Row="0" Grid.ColumnSpan="2" SelectedItem="{Binding ItemToAdd}" IsEditable="True"
-                          ItemsSource="{Binding RemainingItems}" DisplayMemberPath="Name" Background="LightCyan"/>
-                <Button Content="OK" Width="50" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Right" Command="{Binding ModalOkCommand}" />
-                <Button Content="Cancel" Width="60" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Command="{Binding ModalCancelCommand}" />
-            </Grid>
-        </Dialog:CustomDialog>
     </Grid>
 </UserControl>
