--- a/BuddhaBowls/UserControls/NewOrder.xaml
+++ b/BuddhaBowls/UserControls/NewOrder.xaml
@@ -18,8 +18,8 @@
         <Label x:Name="label2" Content="Vendor:" HorizontalAlignment="Center" Margin="-180,25,0,0" VerticalAlignment="Top"/>
         <ComboBox x:Name="comboBox1" HorizontalAlignment="Center" Height="25" Margin="0,25,0,0" SelectedItem="{Binding OrderVendor}"
                   ItemsSource="{Binding VendorList}" DisplayMemberPath="Name" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="button" Grid.Row="0" Content="Auto-Select Vendor(s)" HorizontalAlignment="Left" Margin="500,25,0,0" VerticalAlignment="Top"
-                Width="140" Command="{Binding AutoSelectVendorCommand}"/>
+        <!--<Button x:Name="button" Grid.Row="0" Content="Auto-Select Vendor(s)" HorizontalAlignment="Left" Margin="500,25,0,0" VerticalAlignment="Top"
+                Width="140" Command="{Binding AutoSelectVendorCommand}"/>-->
         <Border Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="Black" BorderThickness="1" />
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
