--- a/BuddhaBowls/UserControls/InventoryTabControl.xaml
+++ b/BuddhaBowls/UserControls/InventoryTabControl.xaml
@@ -27,6 +27,8 @@
                 Command="{Binding CompareCommand}" />
         <Button Grid.Row="0" Height="30" Width="120" Content="Excel Inventory List" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="210, 0"
                 Command="{Binding InvListCommand}" />
+        <Button Grid.Row="0" Height="30" Width="120" Content="Add Inv Item" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0, 0, 350, 0"
+                Command="{Binding AddInvCommand}" />
         <DataGrid x:Name="dataGrid2" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                                 ScrollViewer.VerticalScrollBarVisibility="Auto" ItemsSource="{Binding InventoryList}"
                                 SelectedItem="{Binding SelectedInventory}" AutoGenerateColumns="False" CanUserAddRows="False" Margin="-1,0,1,0"
